src/objects/Credential_Record__c.object
<CustomObject>
    <description>An object to store licenses, credentials, and accreditations for Mentors and members of Mentor households.</description>
    <fields>
        <fullName>CPS_Full_Disclosure_Required__c</fullName>
        <label>Is CPS Full Disclosure Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conviction_Past_5_Years_Federal__c</fullName>
        <label>Conviction Past 5 Years Federal</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conviction_Past_5_Years_State__c</fullName>
        <label>Conviction Past 5 Years State</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conviction_Past_5_Years__c</fullName>
        <formula>IF(  OR(ISPICKVAL(Conviction_Past_5_Years_Federal__c, &apos;Yes&apos;), ISPICKVAL(Conviction_Past_5_Years_State__c, &apos;Yes&apos;)), &apos;Yes&apos;, &apos;No&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conviction Past 5 Years</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credential_Profile_Name__c</fullName>
        <formula>Credential_Profile__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credential Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credential_Profile__c</fullName>
        <label>Credential Profile</label>
        <referenceTo>Credential_Profile__c</referenceTo>
        <relationshipLabel>Credential Records</relationshipLabel>
        <relationshipName>Credential_Records</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>DHR_Documented_Field__c</fullName>
        <formula>Credential_Profile__r.DHR_Documented_Field__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DHR Documented Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHR_Received_Field__c</fullName>
        <formula>Credential_Profile__r.DHR_Received_Field__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DHR Received Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHR_Scope__c</fullName>
        <formula>TEXT(Credential_Profile__r.DHR_Scope__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DHR Scope</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Since_Expired__c</fullName>
        <formula>TODAY() - Expiration_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Expired</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Received__c</fullName>
        <description>A field to calculate the number of days since the credential / license / accreditation was received.</description>
        <formula>TODAY() -  Received_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Documented_Date__c</fullName>
        <label>Documented Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FBI_Full_Disclosure_Required__c</fullName>
        <label>Is FBI Full Disclosure Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Federal_Conviction__c</fullName>
        <label>Federal Conviction</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>In_File__c</fullName>
        <formula>IF(OR( NOT(ISNULL(Received_Date__c)), NOT(ISNULL(Documented_Date__c)) ), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In File</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_of_Clearance__c</fullName>
        <label>Outcome of Clearance</label>
        <picklist>
            <picklistValues>
                <fullName>Clear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indicated - Abuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indicated - Neglect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indicated - Abuse and Neglect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsubstantiated - Abuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsubstantiated - Neglect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsubstantiated - Abuse and Neglect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exception</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Similar_Credentials__c</fullName>
        <formula>Credential_Profile__r.Similar_Credentials__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Similar Credentials</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Conviction__c</fullName>
        <label>State Conviction</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TMN_Contact__c</fullName>
        <label>TMN Contact</label>
        <referenceTo>TMN_Contact__c</referenceTo>
        <relationshipLabel>Credential Records</relationshipLabel>
        <relationshipName>Credential_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Type_of_Conviction_Federal__c</fullName>
        <label>Type of Conviction (Federal)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Conviction_State__c</fullName>
        <label>Type of Conviction (State)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Credential Record</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Credential_Profile__c</columns>
        <columns>TMN_Contact__c</columns>
        <columns>In_File__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CredRec-{0000000}</displayFormat>
        <label>Credential Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credential Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>